--- a/urban.html
+++ b/urban.html
@@ -29,7 +29,7 @@
                         <li id="changejl">
                              <a href="earth.html">Earth</a>
                         </li>
-                        <li id="changejl"><a href="urban.html"><img src="Urban/ferriswheel.gif" /></a>
+                        <li id="changejl"><a href="urban.html">Urban</a>
                         </li>
                     </ul>
                 </div>
