--- a/animals.html
+++ b/animals.html
@@ -4,7 +4,7 @@
     <head>
         <title>Wallpaper | Animals</title>
         <link href="earth.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="Alle/globe.gif?v2">
+        <link rel="icon" href="http://imgur.com/odqh8ya">
         <meta charset="utf-8">
     </head>
 
@@ -24,7 +24,7 @@
                         </li>
                         <li style="padding-right: 60px;padding-left:10px; opacity: 1;">
                             <a href="animals.html">
-                                <img id="cheetah" src="Animals/cheetah3.gif" />
+                                <img id="cheetah" src="http://imgur.com/ntnLy17" />
                             </a>
                         </li>
                         <li id="changejl"><a href="nature.html">Nature</a> 
@@ -41,31 +41,31 @@
                     <div class="blueberry">
                         <ul class="slides">
                             <li>
-                                <img src="Animals/thisparrotisdead.jpg">
+                                <img src="http://imgur.com/cFaYUHZ">
                             </li>
                             <li>
-                                <img src="Animals/dieselfant.jpg">
+                                <img src="http://imgur.com/1duX5JX">
                             </li>
                             <li>
-                                <img src="Animals/jammerdatiknietnaarjetoekan.jpg">
+                                <img src="http://imgur.com/QWUlnbB">
                             </li>
                             <li>
-                                <img src="Animals/killahwhalem8.jpg">
+                                <img src="http://imgur.com/Khjy3jB">
                             </li>
                             <li>
-                                <img src="Animals/muricafuckyeah.jpg">
+                                <img src="http://imgur.com/w0FnnaC">
                             </li>
                             <li>
-                                <img src="Animals/bitchimfabulous.jpg">
+                                <img src="http://imgur.com/vLE5NbM">
                             </li>
                             <li>
-                                <img src="Animals/giraffe.jpg">
+                                <img src="http://imgur.com/6oKrInC">
                             </li>
                             <li>
-                                <img src="Animals/juliun.jpg">
+                                <img src="http://imgur.com/Heb6XdU">
                             </li>
                             <li>
-                                <img src="Animals/vaderjacob.jpg">
+                                <img src="http://imgur.com/EfOHg4I">
                             </li>
 
                         </ul>
@@ -77,14 +77,14 @@
                 <ul>
 
                     <li>
-                        <a href="Animals/rhino.jpg" download><img id="container1jlafb" src="Animals/rhino.jpg" /></a>
+                        <a href="http://imgur.com/pOUdPxi" download><img id="container1jlafb" src="http://imgur.com/pOUdPxi" /></a>
                     </li>
                 </ul>
             </div>
             <div class="container2jl">
                 <ul>
                     <li>
-                        <a href="Animals/luiaard.jpg" download><img id="container2jlafb" src="Animals/luiaard.jpg" /></a>
+                        <a href="http://imgur.com/ofkTXlB" download><img id="container2jlafb" src="http://imgur.com/ofkTXlB" /></a>
                     </li>
 
                 </ul>
@@ -94,11 +94,11 @@
                 <ul>
 
                     <li>
-                        <a href="Animals/monkeyonthecar.jpg" download><img id="container1jlafb" src="Animals/monkeyonthecar.jpg" /></a>
+                        <a href="http://imgur.com/PiKqGYV" download><img id="container1jlafb" src="http://imgur.com/PiKqGYV" /></a>
                     </li>
                 </ul>
             </div>
-            <div class="container4jl"><ul><li style="width:40%;"> <div class="container4li3jl"><ul><li><img style="width:100%;" src="Animals/killahwhalem8.jpg"></li><li><img id="container4liimgjl" src="Animals/bitchimfabulous.jpg"><img id="container4liimgjl" src="Animals/vaderjacob.jpg"></li></ul></div></li><li><div class="container4li1jl"><ul><li><img src="Animals/jammerdatiknietnaarjetoekan.jpg"></li><li><img src="Animals/muricafuckyeah.jpg"></li><li><img src="Animals/juliun.jpg"></li></ul></div></li><li><div class="container4li2jl"><ul><li><img src="Animals/dieselfant.jpg"></li><li><img src="Animals/giraffe.jpg"></li><li><img src="Animals/thisparrotisdead.jpg"></li></ul> </div></li></ul></div>
+            <div class="container4jl"><ul><li style="width:40%;"> <div class="container4li3jl"><ul><li><img style="width:100%;" src="http://imgur.com/Khjy3jB"></li><li><img id="container4liimgjl" src="http://imgur.com/vLE5NbM"><img id="container4liimgjl" src="http://imgur.com/EfOHg4I"></li></ul></div></li><li><div class="container4li1jl"><ul><li><img src="http://imgur.com/QWUlnbB"></li><li><img src="http://imgur.com/w0FnnaC"></li><li><img src="http://imgur.com/Heb6XdU"></li></ul></div></li><li><div class="container4li2jl"><ul><li><img src="http://imgur.com/1duX5JX"></li><li><img src="http://imgur.com/6oKrInC"></li><li><img src="http://imgur.com/cFaYUHZ"></li></ul> </div></li></ul></div>
 
         </header>
 
