--- a/earth.html
+++ b/earth.html
@@ -4,7 +4,7 @@
     <head>
         <title>Wallpaper | Earth</title>
         <link href="earth.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="Alle/globe.gif?v2">
+        <link rel="icon" href="http://imgur.com/odqh8ya">
         <meta charset="utf-8">
     </head>
 
@@ -28,7 +28,7 @@
                         </li>
                         <li style="padding-right: 60px;padding-left:10px; opacity: 1;">
                             <a href="earth.html">
-                                <img id="globejl" src="Alle/globe.gif" />
+                                <img id="globejl" src="http://imgur.com/odqh8ya" />
                             </a>
                         </li>
                         <li id="changejl"><a href="urban.html">Urban</a>
@@ -41,31 +41,31 @@
                     <div class="blueberry">
                         <ul class="slides">
                             <li>
-                                <img src="Earth/toast.jpg">
+                                <img src="http://imgur.com/8y6OO0K">
                             </li>
                             <li>
-                                <img src="Earth/amazon.jpg">
+                                <img src="http://imgur.com/uaeOTzG">
                             </li>
                             <li>
-                                <img src="Earth/midgetgolf.jpg">
+                                <img src="http://imgur.com/YmgOZZ7">
                             </li>
                             <li>
-                                <img src="Earth/torfackingnado.jpg">
+                                <img src="http://imgur.com/NxZiT3a">
                             </li>
                             <li>
-                                <img src="Earth/ijsbeer.jpg">
+                                <img src="http://imgur.com/OGwP5RX">
                             </li>
                             <li>
-                                <img src="Earth/vulcano.jpg">
+                                <img src="http://imgur.com/hKWXLv4">
                             </li>
                             <li>
-                                <img src="Earth/algarve.jpg">
+                                <img src="http://imgur.com/vdaQJ7R">
                             </li>
                             <li>
-                                <img src="Earth/dessert.jpg">
+                                <img src="http://imgur.com/pjbCLCl">
                             </li>
                             <li>
-                                <img src="Earth/piratesofthecurrybean.jpg">
+                                <img src="http://imgur.com/W6ms289">
                             </li>
 
 
@@ -80,14 +80,14 @@
                     <li>
                     </li>
                     <li>
-                        <a href="Earth/mounteveractive.jpg" download><img id="container1jlafb" src="Earth/mounteveractive.jpg" /></a>
+                        <a href="Earth/mounteveractive.jpg" download><img id="container1jlafb" src="http://imgur.com/EXtk4Ri" /></a>
                     </li>
                 </ul>
             </div>
             <div class="container2jl">
                 <ul>
                     <li>
-                        <a href="Earth/grandkanye.jpg" download><img id="container2jlafb" src="Earth/grandkanye.jpg" /></a>
+                        <a href="Earth/grandkanye.jpg" download><img id="container2jlafb" src="http://imgur.com/IAWSGq0" /></a>
                     </li>
                     <li>
                     </li>
@@ -96,7 +96,7 @@
             <div class="container3jl">
                 <ul>
                     <li>
-                        <a href="Earth/aliens.jpg" download><img id="container3jlafb" src="Earth/aliens.jpg" /></a>
+                        <a href="Earth/aliens.jpg" download><img id="container3jlafb" src="http://imgur.com/XPEgUrv" /></a>
                     </li>
                     <li>
                     </li>
@@ -106,7 +106,7 @@
                 <ul>
 
                     <li>
-                        <a href="Earth/volcano.jpg" download><img id="container1jlafb" src="Earth/volcano.jpg" /></a>
+                        <a href="Earth/volcano.jpg" download><img id="container1jlafb" src="http://imgur.com/HJH2x0V" /></a>
                     </li>
                 </ul>
             </div>
@@ -117,14 +117,14 @@
                             <ul>
 
                                 <li>
-                                    <a href="Earth/dessert.jpg" download><img src="Earth/dessert.jpg"></a>
+                                    <a href="Earth/dessert.jpg" download><img src="http://imgur.com/pjbCLCl"></a>
 
                                 </li>
                                 <li>
-                                    <a href="Earth/midgetgolf.jpg" download><img src="Earth/midgetgolf.jpg"></a>
+                                    <a href="Earth/midgetgolf.jpg" download><img src="http://imgur.com/YmgOZZ7"></a>
                                 </li>
                                 <li>
-                                    <a href="Earth/ijsbeer.jpg" download><img src="Earth/ijsbeer.jpg"></a>
+                                    <a href="Earth/ijsbeer.jpg" download><img src="http://imgur.com/OGwP5RX"></a>
                                 </li>
                             </ul>
                         </div>
@@ -133,13 +133,13 @@
                         <div class="container4li2jl">
                             <ul>
                                 <li>
-                                    <a href="Earth/toast.jpg" download><img src="Earth/toast.jpg"></a>
+                                    <a href="Earth/toast.jpg" download><img src="http://imgur.com/8y6OO0K"></a>
                                 </li>
                                 <li>
-                                    <a href="Earth/piratesofthecurrybean.jpg" download><img src="Earth/piratesofthecurrybean.jpg"></a>
+                                    <a href="Earth/piratesofthecurrybean.jpg" download><img src="http://imgur.com/W6ms289"></a>
                                 </li>
                                 <li>
-                                    <a href="Earth/algarve.jpg" download><img src="Earth/algarve.jpg"></a>
+                                    <a href="Earth/algarve.jpg" download><img src="http://imgur.com/vdaQJ7R"></a>
                                 </li>
                             </ul>
                         </div>
@@ -148,11 +148,11 @@
                         <div class="container4li3jl">
                             <ul>
                                 <li>
-                                    <a href="Earth/torfackingnado.jpg" download><img src="Earth/torfackingnado.jpg"></a>
+                                    <a href="Earth/torfackingnado.jpg" download><img src="http://imgur.com/NxZiT3a"></a>
                                 </li>
                                 <li>
-                                    <a href="Earth/vulcano.jpg" download><img id="container4liimgjl" src="Earth/vulcano.jpg"></a>
-                                    <a href="Earth/amazon.jpg" download><img id="container4liimgjl" src="Earth/amazon.jpg"></a>
+                                    <a href="Earth/vulcano.jpg" download><img id="container4liimgjl" src="http://imgur.com/hKWXLv4"></a>
+                                    <a href="Earth/amazon.jpg" download><img id="container4liimgjl" src="http://imgur.com/uaeOTzG"></a>
                                 </li>
 
 
