--- a/urban.html
+++ b/urban.html
@@ -39,31 +39,31 @@
                     <div class="blueberry">
                         <ul class="slides">
                             <li>
-                                <img src="Urban/mayotemple.jpg">
+                               <a href="http://imgur.com/wIlACQj"><img src="http://i.imgur.com/wIlACQj.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Urban/alcatrash.jpg">
+<a href="http://imgur.com/dygvQIn"><img src="http://i.imgur.com/dygvQIn.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Urban/london.jpg">
+                               <a href="http://imgur.com/OIk2gnV"><img src="http://i.imgur.com/OIk2gnV.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Urban/moskoud.jpg">
+                             <a href="http://imgur.com/cWXg5po"><img src="http://i.imgur.com/cWXg5po.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Urban/prague.jpg">
+                             <a href="http://imgur.com/7GEPjDt"><img src="http://i.imgur.com/7GEPjDt.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Urban/chinesetower.jpg">
+                               <a href="http://imgur.com/q6ermOe"><img src="http://i.imgur.com/q6ermOe.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Urban/loevere.jpg">
+                             <a href="http://imgur.com/QSZcZ8o"><img src="http://i.imgur.com/QSZcZ8o.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Urban/newyork.jpg">
+                               <a href="http://imgur.com/2sBe7rj"><img src="http://i.imgur.com/2sBe7rj.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Urban/washington.jpg">
+                               <a href="http://imgur.com/nGYXIAN"><img src="http://i.imgur.com/nGYXIAN.jpg" title="source: imgur.com" /></a>
                             </li>
 
 
