--- a/urban.html
+++ b/urban.html
@@ -77,14 +77,14 @@
                     <li>
                     </li>
                     <li>
-                        <a href="Urban/touch_mafuckinghal.jpg" download><img id="container1jlafb" src="Urban/touch_mafuckinghal.jpg" /></a>
+                       <a href="http://imgur.com/cQvCVNZ"><img src="http://i.imgur.com/cQvCVNZ.jpg" title="source: imgur.com" /></a>
                     </li>
                 </ul>
             </div>
             <div class="container2jl">
                 <ul>
                     <li>
-                        <a href="Urban/pisa.jpg" download><img id="container2jlafb" src="Urban/pisa.jpg" /></a>
+                       <a href="http://imgur.com/Nfe3NPP"><img src="http://i.imgur.com/Nfe3NPP.jpg" title="source: imgur.com" /></a>
                     </li>
                     <li>
                     </li>
@@ -95,7 +95,7 @@
                     <li>
                     </li>
                     <li>
-                        <a href="Urban/pirade.jpg" download><img id="container1jlafb" src="Urban/pirade.jpg" /></a>
+                      <a href="http://imgur.com/jdEQv6L"><img src="http://i.imgur.com/jdEQv6L.jpg" title="source: imgur.com" /></a>
                     </li>
                 </ul>
             </div>
@@ -106,11 +106,11 @@
                             <ul>
 
                                 <li>
-                                    <a href="Urban/loevere.jpg" download><img id="container4liimgjl" src="Urban/loevere.jpg"></a>
-                                    <a href="Urban/moskoud.jpg" download><img id="container4liimgjl" src="Urban/moskoud.jpg"></a>
+                                    <a href="http://imgur.com/QSZcZ8o"><img src="http://i.imgur.com/QSZcZ8o.jpg" title="source: imgur.com" /></a>
+                                   <a href="http://imgur.com/cWXg5po"><img src="http://i.imgur.com/cWXg5po.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
-                                    <a href="Urban/london.jpg" download><img src="Urban/london.jpg"></a>
+                                   <a href="http://imgur.com/OIk2gnV"><img src="http://i.imgur.com/OIk2gnV.jpg" title="source: imgur.com" /></a>
                                 </li>
                             </ul>
                         </div>
@@ -119,13 +119,13 @@
                         <div class="container4li1jl">
                             <ul>
                                 <li>
-                                    <a href="Urban/mayotemple.jpg" download><img src="Urban/mayotemple.jpg"></a>
+                                 <a href="http://imgur.com/wIlACQj"><img src="http://i.imgur.com/wIlACQj.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
-                                    <a href="Urban/alcatrash.jpg" download><img src="Urban/alcatrash.jpg"></a>
+                                   <a href="http://imgur.com/dygvQIn"><img src="http://i.imgur.com/dygvQIn.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
-                                    <a href="Urban/prague.jpg" download><img src="Urban/prague.jpg"></a>
+                                  <a href="http://imgur.com/7GEPjDt"><img src="http://i.imgur.com/7GEPjDt.jpg" title="source: imgur.com" /></a>
                                 </li>
                             </ul>
                         </div>
@@ -134,13 +134,13 @@
                         <div class="container4li2jl">
                             <ul>
                                 <li>
-                                    <a href="Urban/chinesetower.jpg" download><img src="Urban/chinesetower.jpg"></a>
+                                   <a href="http://imgur.com/q6ermOe"><img src="http://i.imgur.com/q6ermOe.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
-                                    <a href="Urban/newyork.jpg" download><img src="Urban/newyork.jpg"></a>
+                                   <a href="http://imgur.com/2sBe7rj"><img src="http://i.imgur.com/2sBe7rj.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
-                                    <a href="Urban/washington.jpg" download><img src="Urban/washington.jpg"></a>
+                                   <a href="http://imgur.com/nGYXIAN"><img src="http://i.imgur.com/nGYXIAN.jpg" title="source: imgur.com" /></a>
                                 </li>
                             </ul>
                         </div>
