--- a/nature.html
+++ b/nature.html
@@ -40,31 +40,31 @@
                     <div class="blueberry">
                         <ul class="slides">
                             <li>
-                                <img src="Nature/naturepark.jpeg">
+                              <a href="http://imgur.com/D2yqnZG"><img src="http://i.imgur.com/D2yqnZG.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Nature/forestgump.jpg">
+                               <a href="http://imgur.com/UGw7IkR"><img src="http://i.imgur.com/UGw7IkR.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Nature/redforest.jpg">
+                              <a href="http://imgur.com/OWNGEJk"><img src="http://i.imgur.com/OWNGEJk.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Nature/waterfall.jpg">
+                             <a href="http://imgur.com/uaeOTzG"><img src="http://i.imgur.com/uaeOTzG.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Nature/runforestrun.jpg">
+                               <a href="http://imgur.com/wFU6opl"><img src="http://i.imgur.com/wFU6opl.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Nature/hawaiiflower.jpg">
+                              <a href="http://imgur.com/SwRIVfE"><img src="http://i.imgur.com/SwRIVfE.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Nature/bwb.jpg">
+<a href="http://imgur.com/07ObnLH"><img src="http://i.imgur.com/07ObnLH.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Nature/whereiswaldo.jpg">
+                            <a href="http://imgur.com/Fiylgvb"><img src="http://i.imgur.com/Fiylgvb.jpg" title="source: imgur.com" /></a>
                             </li>
                             <li>
-                                <img src="Nature/avatar.jpg">
+                             <a href="http://imgur.com/FGmKfK9"><img src="http://i.imgur.com/FGmKfK9.jpg" title="source: imgur.com" /></a>
                             </li>
 
 
@@ -96,7 +96,7 @@
                     <li>
                     </li>
                     <li>
-                        <a href="Nature/baobab.jpg" download><img id="container1jlafb" src="Nature/baobab.jpg" /></a>
+                       <a href="http://imgur.com/pMlXWyw"><img src="http://i.imgur.com/pMlXWyw.jpg" title="source: imgur.com" /></a>
                     </li>
                 </ul>
             </div>
@@ -106,13 +106,13 @@
                         <div class="container4li1jl">
                             <ul>
                                 <li>
-                                    <a href="Nature/baobab.jpg" download><img src="Nature/baobab.jpg"></a>
+                                   <a href="http://imgur.com/pMlXWyw"><img src="http://i.imgur.com/pMlXWyw.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
-                                    <a href="Nature/forestgump.jpg" download><img src="Nature/forestgump.jpg"></a>
+                                 <a href="http://imgur.com/UGw7IkR"><img src="http://i.imgur.com/UGw7IkR.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
-                                    <a href="Nature/hawaiiflower.jpg" download><img src="Nature/hawaiiflower.jpg"></a>
+                                    <a href="http://imgur.com/SwRIVfE"><img src="http://i.imgur.com/SwRIVfE.jpg" title="source: imgur.com" /></a>
                                 </li>
                             </ul>
                         </div>
@@ -121,13 +121,13 @@
                         <div class="container4li2jl">
                             <ul>
                                 <li>
-                                    <a href="Nature/bwb.jpg" download><img src="Nature/bwb.jpg"></a>
+                                    <a href="http://imgur.com/07ObnLH"><img src="http://i.imgur.com/07ObnLH.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
-                                    <a href="Nature/0.jpg" download><img src="Nature/0.jpg"></a>
+                                    <a href="http://imgur.com/fiIQXq7"><img src="http://i.imgur.com/fiIQXq7.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
-                                    <a href="Nature/avatar.jpg" download><img src="Nature/avatar.jpg"></a>
+                                  <a href="http://imgur.com/FGmKfK9"><img src="http://i.imgur.com/FGmKfK9.jpg" title="source: imgur.com" /></a>
                                 </li>
                             </ul>
                         </div>
@@ -136,7 +136,7 @@
                         <div class="container4li3jl">
                             <ul>
                                 <li>
-                                    <a href="Nature/naturepark.jpeg" download><img src="Nature/naturepark.jpeg"></a>
+                                    <a href="http://imgur.com/D2yqnZG"><img src="http://i.imgur.com/D2yqnZG.jpg" title="source: imgur.com" /></a>
                                 </li>
                                 <li>
                                     <a href="Earth/midgetgolf.jpg" download><img id="container4liimgjl" src="Earth/midgetgolf.jpg"></a>
