--- a/nature.html
+++ b/nature.html
@@ -4,7 +4,7 @@
     <head>
         <title>Wallpaper | Nature</title>
         <link href="earth.css" rel="stylesheet" type="text/css">
-        <link rel="icon" href="Alle/globe.gif?v2">
+        <link rel="icon" href="http://i.imgur.com/e0eAzka.gifv">
         <meta charset="utf-8">
     </head>
 
